--- a/app/globals.css
+++ b/app/globals.css
@@ -2,10 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-  font-family: Arial, Helvetica, sans-serif;
-}
-
 @layer base {
   :root {
     --background: 0 0% 100%;
@@ -27,13 +23,14 @@ body {
     --border: 0 0% 89.8%;
     --input: 0 0% 89.8%;
     --ring: 0 0% 3.9%;
+    --radius: 0.5rem;
     --chart-1: 12 76% 61%;
     --chart-2: 173 58% 39%;
     --chart-3: 197 37% 24%;
     --chart-4: 43 74% 66%;
     --chart-5: 27 87% 67%;
-    --radius: 0.5rem;
   }
+
   .dark {
     --background: 0 0% 3.9%;
     --foreground: 0 0% 98%;
@@ -68,5 +65,85 @@ body {
   }
   body {
     @apply bg-background text-foreground;
+  }
+}
+
+@layer utilities {
+  .text-balance {
+    text-wrap: balance;
+  }
+}
+
+::-moz-selection {
+  background: rgb(250, 250, 250, 0.2);
+}
+
+::selection {
+  background: rgb(250, 250, 250, 0.2);
+}
+
+html {
+  scroll-behavior: smooth;
+  scrollbar-color: #737373 transparent;
+  color-scheme: dark light;
+}
+
+.backdrop {
+  position: absolute;
+  inset: 0;
+  z-index: -1;
+  background-color: hsl(var(--background));
+  border-radius: 9999px;
+}
+
+.tap-target {
+  position: relative;
+}
+
+@media (max-width: 768px) {
+  .tap-target::after {
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 44px;
+    height: 44px;
+  }
+}
+
+@supports (backdrop-filter: blur(16px)) or (-webkit-backdrop-filter: blur(16px)) {
+  .backdrop {
+    background-color: hsl(var(--background) / 0.4);
+    backdrop-filter: blur(16px);
+  }
+}
+
+@supports (mask-image: none) or (-webkit-mask-image: none) {
+  .backdrop {
+    pointer-events: none;
+    height: 200%;
+    border-radius: 0px;
+    mask-image: linear-gradient(to bottom, black 0% 50%, transparent 50% 100%),
+      url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%' height='100%'%3E%3Crect x='0' y='0' width='100%' height='50%' rx='20' ry='20' fill='black'/%3E%3C/svg%3E");
+    mask-composite: intersect;
+  }
+}
+
+@supports (backdrop-filter: blur(12px)) or (-webkit-backdrop-filter: blur(12px))
+  or (mask-image: none) or (-webkit-mask-image: none) {
+  .backdrop-edge {
+    position: absolute;
+    inset: 0;
+    left: 4%;
+    right: 4%;
+    top: 100%;
+    background-color: hsl(0deg 0% 100% / 0.1);
+    backdrop-filter: blur(12px) brightness(0.96);
+    pointer-events: none;
+    height: 100%;
+    mask-image: linear-gradient(to bottom, black 0% 2px, transparent 2px 100%),
+      url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%' height='100%'%3E%3Crect x='0' y='0' width='100%' height='2px' rx='100' ry='100' fill='black'/%3E%3C/svg%3E");
+    mask-composite: intersect;
   }
 }
